--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ main {
   background-color: #1e1e1f;
   height: 100%;
 }
-main .container {
+main #container {
   display: flex;
   justify-content:space-evenly;
   align-items: center;
@@ -20,7 +20,7 @@ main .container {
   margin: 0 auto;
   padding-top: 100px;
 }
-.container > div {
+#container > div {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,12 +31,12 @@ main .container {
   color: white;
   text-align: center;
 }
-.container > div img {
+#container > div img {
   width: 85%;
   height: auto;
   margin-bottom: 10px;
 }
-.container > div h4 {
+#container > div h4 {
   color: #787878;
   margin: 10px 0;
 }
